--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,6 @@ form {
 #input-to-encode {
   border: none;
   background-color: var(--light-blue);
-  height: 20%;
   width: 100%;
   font-family: var(--font-family);
   color: var(--dark-blue);
@@ -30,7 +29,7 @@ form {
   font-style: normal;
   font-size: 2rem;
   margin-top: 10%;
-  height: 70%;  
+  height: 75%;  
 }
 
 
@@ -100,6 +99,7 @@ aside {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-width: 18rem;
 }
 
 aside img {
@@ -123,7 +123,9 @@ aside p {
   line-height: 1.15rem;
   letter-spacing: 0em;
   text-align: center;
-  color: var(--gray)
+  color: var(--gray);
+  width: 90%;
+  margin-top: 5%;
 }
 
 .empty-message {
@@ -133,10 +135,11 @@ aside p {
 .message {
   font-style: normal;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 1.5rem;
   height: 80%;
   text-align: left;
   margin: 1.5rem;
+  line-height: 2rem;
 }
 
 .button-copy {
